--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Omer Zachar 
-description: A whole new world.
+description: I'll take you to a whole new world.
 show_downloads: false
 theme: jekyll-theme-architect
